FTB-Community/force-app/main/default/objects/FTB_Calendar__c/FTB_Calendar__c.object-meta.xml
<CustomObject>
    <description>FTB Object to track championship game schedule and pairings</description>
    <label>Calendar</label>
    <nameField>
        <label>Calendar Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Calendars</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>