FTB-Community/force-app/main/default/objects/FTB_Calendar__c/fields/FTB_EndDate__c.field-meta.xml
<CustomField>
    <fullName>FTB_EndDate__c</fullName>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>