FTB-Community/force-app/main/default/objects/FTB_Calendar__c/fields/FTB_NumberOfGames__c.field-meta.xml
<CustomField>
    <fullName>FTB_NumberOfGames__c</fullName>
    <label>Number Of Games</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>