FTB-Community/force-app/main/default/objects/FTB_Calendar__c/fields/FTB_Pairings__c.field-meta.xml
<CustomField>
    <fullName>FTB_Pairings__c</fullName>
    <label>Pairings</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>