FTB-Community/force-app/main/default/objects/FTB_Calendar__c/fields/FTB_StartDate__c.field-meta.xml
<CustomField>
    <fullName>FTB_StartDate__c</fullName>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>