FTB-Community/force-app/main/default/objects/FTB_Calendar__c/listViews/FTB_LV_Calendars.listView-meta.xml
<ListView>
    <fullName>FTB_LV_Calendars</fullName>
    <columns>NAME</columns>
    <columns>FTB_Championship__c</columns>
    <columns>FTB_NumberOfGames__c</columns>
    <columns>FTB_StartDate__c</columns>
    <columns>FTB_EndDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Calendars</label>
</ListView>